Migrate boolean predicate AST nodes to Predicated + sealed Predicate
SQL's <predicate> splits into <row value predicand> (the LHS) and
<predicate part 2> (operator + RHS) — independent shapes that the AST
previously collapsed by stamping the LHS into each predicate node. The
shapes are independent: simple-CASE extended WHENs and some
pattern-matching contexts need a predicate without an explicit LHS, while
ordinary predicates pair both. Modeling them as orthogonal AST nodes
matches the spec and lets a single Predicate impl serve both positions.

Introduce a sealed Predicate Node with one impl per part-2 production
(BetweenPredicate, ComparisonPredicate, DistinctFromPredicate, InPredicate,
IsNullPredicate, LikePredicate, QuantifiedComparisonPredicate), plus a
Predicated(value, predicate) AST node that carries the LHS+predicate pair.
IR and bytecode are unchanged: TranslationMap maps the new AST shape onto
the same IR nodes (Between, Comparison, In, IsNull, etc.).