@@ -13,22 +13,28 @@
  */
 package io.trino.sql.tree;
 
-import com.google.common.collect.ImmutableList;
-
 import java.util.List;
 import java.util.Objects;
 
 import static java.util.Objects.requireNonNull;
 
-public class IsNotNullPredicate
+/// Represents the SQL spec's `<predicate> ::= <row value predicand> <predicate part 2>` shape:
+/// a value (the LHS) paired with a predicate (the part-2 fragment).
+///
+/// The same [Predicate] types appear in two positions in the spec — as the right-hand side of
+/// a full predicate (this class), and as a SQL:2023 F262 extended `CASE` WHEN operand, where
+/// the case operand is implicitly bound to the LHS.
+public final class Predicated
         extends Expression
 {
     private final Expression value;
+    private final Predicate predicate;
 
-    public IsNotNullPredicate(NodeLocation location, Expression value)
+    public Predicated(NodeLocation location, Expression value, Predicate predicate)
     {
         super(location);
         this.value = requireNonNull(value, "value is null");
+        this.predicate = requireNonNull(predicate, "predicate is null");
     }
 
     public Expression getValue()
@@ -36,16 +42,21 @@ public class IsNotNullPredicate
         return value;
     }
 
-    @Override
-    public <R, C> R accept(AstVisitor<R, C> visitor, C context)
+    public Predicate getPredicate()
     {
-        return visitor.visitIsNotNullPredicate(this, context);
+        return predicate;
     }
 
     @Override
-    public List<Node> getChildren()
+    public <R, C> R accept(AstVisitor<R, C> visitor, C context)
     {
-        return ImmutableList.of(value);
+        return visitor.visitPredicated(this, context);
+    }
+
+    @Override
+    public List<? extends Node> getChildren()
+    {
+        return List.of(value, predicate);
     }
 
     @Override
@@ -54,23 +65,23 @@ public class IsNotNullPredicate
         if (this == o) {
             return true;
         }
-        if (o == null || getClass() != o.getClass()) {
+        if (!(o instanceof Predicated that)) {
             return false;
         }
-
-        IsNotNullPredicate that = (IsNotNullPredicate) o;
-        return Objects.equals(value, that.value);
+        return value.equals(that.value) && predicate.equals(that.predicate);
     }
 
     @Override
     public int hashCode()
     {
-        return value.hashCode();
+        return Objects.hash(value, predicate);
     }
 
     @Override
     public boolean shallowEquals(Node other)
     {
+        // Predicated has no shape of its own — the operator/quantifier/negation it pairs with a
+        // value lives on the predicate child, walked separately by the visitor.
         return sameClass(this, other);
     }
 }
